[package]
name = "offline-election-tool-rework"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
anyhow = "1.0.100"
subxt = "0.44.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
parity-scale-codec = { version = "3", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
hex-literal = "1.1.0"
clap = { version = "4", features = ["derive"] }
jsonrpsee = { version = "0.24", features = ["ws-client"] }
sp-arithmetic = { version = "28.0.0", default-features = false, features = ["std"] }
sp-npos-elections = "38.0.0"
sp-core = { version = "38.0.0", default-features = false }